[package]
name = "trillium-html-rewriter"
version = "0.4.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "streaming html rewriter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-html-rewriter"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]


[dependencies]
async-global-executor = { version = "3.1.0", optional = true }
futures-lite = "2.6.1"
lol-async = "0.3.0"
trillium = "1.0.0-rc.1"
mime = "0.3.17"

[dev-dependencies]
env_logger = "0.11.10"
trillium-proxy = "0.6.0-rc.1"
trillium-rustls = "0.10.0-rc.1"
trillium-smol = "0.5.0-rc.1"
trillium-testing = "0.8.0-rc.1"
