[package]
name = "trillium-html-rewriter"
version = "0.4.0"
edition = "2024"
description = "streaming html rewriter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-html-rewriter"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]


[dependencies]
futures-lite = "2.6.1"
lol-async = "0.3.0"
trillium = "1"
mime = "0.3.17"

[dev-dependencies]
env_logger = "0.11.10"
trillium-proxy = "0.7.0"
trillium-rustls = "0.11.1"
trillium-smol = "0.6.1"
trillium-testing = "0.9.0"
