[package]
name = "trillium-html-rewriter"
version = "0.6.0"
edition = "2024"
description = "streaming html rewriter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-html-rewriter"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]


[dependencies]
futures-lite = "2"
lol-async = "0.4"
trillium = "1"
mime = "0.3"

[dev-dependencies]
env_logger = "0.11"
trillium-proxy = "0.8"
trillium-smol = "0.6"
trillium-testing = "0.10"
